<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.streamsample.New_Broadcast">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/main_background">
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:weightSum="20"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="3"
            ></LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="4"
            android:weightSum="10">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="7"
                android:textAlignment="center"
                android:padding="10dp"
                android:text="@string/ready_to_broadcast"
                android:textColor="@color/loading"
                android:id="@+id/readytobroadcast"
                android:gravity="center|center_vertical"
                android:textSize="32dp"
                />
            <FrameLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="3">

                <ImageButton
                    android:layout_width="62dp"
                    android:layout_height="62dp"
                    android:src="@drawable/broadcast"
                    android:id="@+id/broadcast"
                    android:layout_gravity="center|center_vertical"
                    android:background="@drawable/circle_button_camcoder"/>

            </FrameLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="2"
            android:weightSum="10"
            android:paddingLeft="20dp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/choose"
                android:textSize="32dp"
                android:layout_weight="7"
                android:id="@+id/choose"
                android:textColor="@color/new_broadcast_text"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="6"
            android:weightSum="6"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="2"
                android:weightSum="10"
                >

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:text="@string/publictext"
                    android:layout_weight="7"
                    android:textColor="@color/public_private"
                    android:textSize="28dp"
                    android:id="@+id/publictext"
                    />
                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="3"
                    android:gravity="right"
                    android:paddingRight="30dp">

                    <ImageButton
                        android:layout_width="60dp"
                        android:layout_height="60dp"
                        android:layout_gravity="right"
                        android:background="@drawable/circle_button_p_p"
                        android:src="@drawable/ic_star"
                        android:id="@+id/Public_bro"
                        />
                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1.5"
                android:weightSum="10">
                <TextView
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:text="@string/ortext"
                    android:gravity="top|center_horizontal"
                    android:layout_weight="7"
                    android:textColor="@color/public_private"
                    android:textSize="28dp"
                    android:id="@+id/ortext"
                    />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="2"
                android:weightSum="10">
                <TextView
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:text="@string/privatetext"
                    android:layout_weight="7"
                    android:gravity="center"
                    android:textColor="@color/public_private"
                    android:textSize="28dp"
                    android:id="@+id/privatetext"
                    />
                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="3"
                    android:gravity="right"
                    android:paddingRight="30dp">

                <ImageButton
                    android:layout_width="60dp"
                    android:layout_height="60dp"
                    android:layout_gravity="right"
                    android:background="@drawable/circle_button_p_p"
                    android:src="@drawable/ic_star"
                    android:id="@+id/Private_bro"/>
                </LinearLayout>
            </LinearLayout>

        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="3"
            android:paddingLeft="50dp">
            <FrameLayout
                android:layout_width="70dp"
                android:layout_height="70dp"
                android:layout_gravity="center_vertical"
                android:background="@drawable/broadcast">

            <ImageButton
                android:layout_width="70dp"
                android:layout_height="70dp"
                android:layout_gravity="center_vertical"
                android:text="Back"
                android:id="@+id/cancel_bro"
                android:textSize="16dp"
                android:background="@drawable/ic_do_not_disturb_black_24dp" />


            </FrameLayout>

            <TextView
                android:layout_width="120dp"
                android:layout_height="wrap_content"
                android:paddingLeft="10dp"
                android:textSize="20dp"
                android:id="@+id/ichangemymind"
                android:textStyle="bold"
                android:text="@string/i_change_my_mind"
                android:layout_gravity="center_vertical"
                android:textColor="@color/i_change_my_mind"
                />

        </LinearLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="2"
            android:gravity="bottom"
            >

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:gravity="center"
                >
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@color/black"
                    android:alpha="0.4"
                    android:orientation="horizontal"
                    android:id="@+id/website3">

                </LinearLayout>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:textColor="@color/splash_footer"
                    android:text="QUICKSTREAMER.COM"
                    android:gravity="center|center_vertical"
                    android:textSize="10dp"
                    android:id="@+id/footer"
                    android:layout_gravity="center" />

            </FrameLayout>

        </RelativeLayout>

    </LinearLayout>


</FrameLayout>
