<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/main_background"
    android:weightSum="20"
    android:orientation="vertical"
    tools:context="com.example.streamsample.Splash_Screen">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="10">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="STREAMER"
            android:id="@+id/quikstreamer"
            android:alpha="1.0"
            android:textAlignment="center"
            android:layout_gravity="center"
            android:rotation="-40"
            android:textSize="40sp"
            android:textColor="@color/quikstreamer"
            android:layout_marginTop="20dp"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="QUIK"
            android:textAlignment="center"
            android:id="@+id/quikstreamer2"
            android:alpha="1.0"
            android:layout_gravity="center"
            android:rotation="-40"
            android:textSize="40sp"
            android:textColor="@color/quikstreamer"
            android:layout_marginBottom="40dp"
            android:layout_marginRight="30dp"
            />

    </FrameLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="6"
        android:orientation="vertical"
        android:weightSum="6"
        android:paddingLeft="30dp"
        android:paddingRight="30dp">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"></LinearLayout>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_weight="2"
            android:id="@+id/loading"
            android:text="@string/loading3"
            android:textColor="@color/loading"
            android:textSize="30dp"
            android:textStyle="bold"
            android:layout_marginLeft="20dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:id="@+id/mvp"
            android:text="@string/mvp"
            android:textColor="@color/black"
            android:textSize="18dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.3"></LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:id="@+id/patent"
            android:text="@string/pending_patent"
            android:textColor="@color/black"
            android:textSize="18dp" />

    </LinearLayout>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="4"
        android:gravity="bottom"
        >

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:gravity="center"
           >
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    android:alpha="0.4">

</LinearLayout>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:textColor="@color/splash_footer"
                android:text="\u00a9AmazingNewWorldLC"
                android:gravity="center|center_vertical"
                android:textSize="9dp"
                android:id="@+id/footer"
                android:layout_gravity="center" />

        </FrameLayout>

    </RelativeLayout>

</LinearLayout>
