<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.streamsample.Broadcastors">

    <LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:alpha="0.6"
    android:background="@drawable/main_background">
    </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:weightSum="20"
            android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="3"
       ></LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="3"
        android:weightSum="10">

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="7"
            android:padding="10dp"
            android:text="@string/broadcaste_now"
            android:textColor="@color/loading"
            android:id="@+id/broadcastnow"
            android:gravity="center|center_vertical"
            android:textSize="32dp"
            />
        <FrameLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="3">

        <ImageButton
            android:layout_width="62dp"
            android:layout_height="62dp"
            android:src="@drawable/broadcast"
            android:id="@+id/broadcast"
            android:layout_gravity="center|center_vertical"
            android:background="@drawable/circle_button_camcoder"/>

        </FrameLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2"
        android:gravity="center">
       <TextView
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:text="@string/invite_friends"
           android:textSize="22dp"
           android:paddingLeft="5dp"
           android:id="@+id/invitefriends"
           android:gravity="center|center_vertical"
           android:textColor="@color/invitefriends"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="6">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/broadcastors_text"
            android:textColor="@color/new_broadcast_text"
            android:id="@+id/broadcastors_text"
            android:textSize="32dp"
            android:paddingLeft="40dp"
            android:paddingRight="40dp"
            android:gravity="center|center_vertical"/>
    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="3"
        android:gravity="center">

        <Button
            android:layout_width="80dp"
            android:layout_height="50dp"
            android:background="@drawable/oval_button_back"
            android:layout_gravity="center|center_vertical"
            android:text="Back"
            android:id="@+id/back"
            android:textSize="16dp"
            />

    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="3"
        android:gravity="bottom"
        >

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:gravity="center"
            >
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/black"
                android:alpha="0.4"
                android:orientation="horizontal"
                android:id="@+id/website2">

            </LinearLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:textColor="@color/splash_footer"
                android:text="QUICKSTREAMER.COM"
                android:gravity="center|center_vertical"
                android:textSize="10dp"
                android:id="@+id/footer"
                android:layout_gravity="center" />

        </FrameLayout>

    </RelativeLayout>

        </LinearLayout>


</FrameLayout>
